fixed alignment of weekday labels

--- a/src/components/Planner.module.css
+++ b/src/components/Planner.module.css
@@ -9,11 +9,11 @@
     padding: 10px 10px 0;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
+    position: fixed;
 }
 .weekdays {
     top: var(--planner-top);
-    width: max-content;
 
     &::after {
         content: "";
@@ -41,6 +41,9 @@
     align-items: flex-end;
     line-height: 16px;
 
+    flex: 1;
+    padding: 0 10px;
+    margin: 0 5px;
 }
 
 .toolbar{
